[package]
name = "tls_upgrade"
version = "0.1.0"
edition = "2024"

[lib]
name = "tls_upgrade"          
path = "src/lib.rs"

[dependencies]
#async
async-native-tls = "0.5.0"
tokio-rustls = { version = "0.26", optional = true }

native-tls = { version = "0.2.9", optional = true } # feature
rustls = { version = "0.23.18", default-features = false, features = ["logging", "std", "tls12"], optional = true }
rustls-platform-verifier = { version = "0.6.0", optional = true }
rustls-native-certs = { version = "0.8", optional = true }
rustls-pki-types = { version = "1.14.0", optional = true}
webpki-roots = { version = "1.0.0", optional = true }
boring = { version = "4", optional = true }


[features]
default = ["rustls-tls", "ring"]
rustls-tls = ["dep:tokio-rustls", "dep:rustls", "dep:rustls-pki-types", "dep:webpki-roots"]
aws_lc_rs = ["rustls-tls", "rustls?/aws_lc_rs"]
ring = ["rustls-tls", "rustls?/ring"]