[package]
name = "tls_upgrade"
version = "0.1.0"
edition = "2024"

[lib]
name = "tls_upgrade"          
path = "src/lib.rs"

[dependencies]
#async
async-native-tls = "0.5.0"
tokio-rustls = { version = "0.26", optional = true }
tokio = {version = "1.49.0", features = ["net"]}
futures-io = "0.3.32"

native-tls = { version = "0.2.9", optional = true }
rustls = { version = "0.23.18", default-features = false, features = ["logging", "std", "tls12"], optional = true }
rustls-pki-types = { version = "1", optional = true } 
webpki-roots = { version = "1", optional = true }      

[features]
tokio = []
default = ["rustls-tls", "ring", "tokio"]
async-native-tls = []

rustls-tls = [
    "dep:tokio-rustls",
    "dep:rustls",
    "dep:rustls-pki-types",
    "dep:webpki-roots"
]

aws_lc_rs = ["rustls-tls", "rustls?/aws_lc_rs"]

ring = ["rustls-tls", "rustls?/ring"]
